tests/negative/non_void_return.def
// Negative test trying to return void from a non-void function.

def foo () -> i32
begin
    return;
end
